# valorats

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ipc/: data.rs
src-tauri/src/model/: agent.rs  data.rs  mod.rs
src/pages/main/: index.tsx  models.ts
src/pages/main/components/filters/: index.tsx  style.css
src/pages/main/components/table/: index.tsx  style.css
src/pages/main/hooks/use-agent-store/: index.ts
src/pages/main/hooks/use-event-store/: index.ts
src/pages/main/hooks/use-map-store/: index.ts
src/pages/main/hooks/use-role-store/: index.ts
