[package]
name = "valorats"
version = "0.0.0"
description = "This project aims to gather competitive statistics of Valorant agents from the website https://thespike.gg using web scraping techniques. The collected data will include information such as pick rate of each agent in competitive play. The goal of the project is to provide valuable insights into the current meta and trends in the competitive Valorant scene."
authors = ["Miguel Robledo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
select = "0.6.0"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
